--- a/LibraryApp/Views/Author/Index.cshtml
+++ b/LibraryApp/Views/Author/Index.cshtml
@@ -6,22 +6,21 @@
 
 <h1>Tu są autorzy</h1>
 <div class="col-9">
-        <div class="list-group list-group-flush bg-white">
-            @foreach (var author in Model)
-            {
-                <div class="list-group-item d-flex w-100 align-items-center justify-content-between">
-                        <div class="col-9">
-                            <a class="text-decoration-none text-dark" asp-route-id="@author.Id" asp-controller="Author" asp-action="Details"><strong class="mb-1">@author.Name</strong></a><br>
-                            <small class="small">Data zamknięcia</small>
-                        </div>
-                        <div>
-                            
-                                <a class="text-decoration-none text-dark btn btn-light" asp-route-id="@author.Id" asp-controller="Author" asp-action="Edit"><i class="answerIcon bi">Edytuj</i></a>
-                                <a class="text-decoration-none text-dark btn btn-light" asp-route-id="@author.Id" asp-controller="Author" asp-action="Delete"><i class="answerIcon bi bi-trash"> Usuń</i></a>
-                            
-                        </div>
+    <a class="btn btn-primary" asp-controller="Author" asp-action="Create">Dodaj autora</a>
+
+    <div class="list-group list-group-flush bg-white">
+        @foreach (var author in Model)
+        {
+            <div class="list-group-item d-flex w-100 align-items-center justify-content-between">
+                <div class="col-9">
+                    <a class="text-decoration-none text-dark" asp-route-id="@author.Id" asp-controller="Author" asp-action="Details"><strong class="mb-1">@author.Name</strong></a><br>
+                    <small class="small">Data zamknięcia</small>
                 </div>
-                
-            }
-        </div>
+                <div>   
+                    <a class="text-decoration-none text-dark btn btn-light" asp-route-id="@author.Id" asp-controller="Author" asp-action="Edit"><i class="answerIcon bi">Edytuj</i></a>
+                    <a class="text-decoration-none text-dark btn btn-light" asp-route-id="@author.Id" asp-controller="Author" asp-action="Delete"><i class="answerIcon bi bi-trash"> Usuń</i></a>                 
+                </div>
+            </div>    
+        }
+    </div>
 </div>
