--- a/LibraryApp/Views/Book/Details.cshtml
+++ b/LibraryApp/Views/Book/Details.cshtml
@@ -4,9 +4,9 @@
 @{
 }
 
-O autorze
+O książce
 <div>
-    <h3>@Model.Name @Model.LastName</h3>
+    <h3>@Model.Title</h3>
 
-    <p>@Model.Id</p>
+    <p>@Model.City</p>
 </div>
