--- a/LibraryApp/Views/Book/Edit.cshtml
+++ b/LibraryApp/Views/Book/Edit.cshtml
@@ -1,16 +1,17 @@
-﻿
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
 @{
-    ViewData["Title"] = "AddBook";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+Edytowanie książki
 
 <div class="p-4">
-    <form asp-controller="Book" asp-action="Create" method="post">
-        <h1>Dodaj książkę</h1>
+    <form asp-controller="Book" asp-action="Edit" method="post">
+        <h1>Edytuj książkę</h1>
         
         <div class="form-group">
             <label for="Title">Tytuł</label><br>
-            <input name="Title" type="text" class="form-control" minlength="3" maxlength="100" required>
+            <input name="Title" type="text" class="form-control" minlength="3" maxlength="100" required value="@Model.Title">
         </div>
 
         <div class="form-group">
@@ -23,7 +24,7 @@
         
         <div class="form-group">
             <label for="Description">Opis</label><br>
-            <input name="Description" type="text" class="form-control" minlength="3" maxlength="100" required>
+            <input name="Description" type="text" class="form-control" minlength="3" maxlength="100" required value="@Model.Description">
         </div>
 
         <div class="form-group">
@@ -33,14 +34,14 @@
 
         <div class="form-group">
             <label for="Year">Rok</label><br>
-            <input name="Year" type="number" class="form-control" minlength="3" maxlength="100" required>
+            <input name="Year" type="number" class="form-control" minlength="3" maxlength="100" required value="@Model.Year">
         </div>
 
         <div class="form-group">
             <label for="City">Miasto</label><br>
-            <input name="City" type="text" class="form-control" minlength="3" maxlength="100" required>
+            <input name="City" type="text" class="form-control" minlength="3" maxlength="100" required value="@Model.City">
         </div>
-
-        <button id="save" class="btn btn-primary" type="submit">Opublikuj</button>
+        
+        <button id="save" class="btn btn-primary" type="submit">Zapisz</button>
     </form>
 </div>
