--- a/LibraryApp/Views/Book/Index.cshtml
+++ b/LibraryApp/Views/Book/Index.cshtml
@@ -1,68 +1,124 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    @model List<Book>
+﻿@{
+     ViewData["Title"] = "Książki";
 }
 
 <div class="container">
-    <div class="row p-2">
-        <div class="col-5">
-            <a class="btn btn-primary" asp-controller="Book" asp-action="Create">Dodaj książkę</a>
+    @if (User.IsInRole("Admin"))
+    {
+        <div class="row p-2">
+            <div class="col-5">
+                <a class="btn btn-primary" asp-controller="Book" asp-action="Create">Dodaj książkę</a>
+            </div>
+            <div class="col-7 d-flex justify-content-end">
+                <label class="form-label me-3 align-self-center">Kategoria</label>
+                <select class="form-control w-25">
+                    <option value="">Wszystko</option>
+                    @for (int i = 0; i < @ViewBag.Categories.Count; i++)
+                    {
+                        <option value="@i">@ViewBag.Categories[@i]</option>
+                    }
+                </select>
+            </div>
         </div>
-        <div class="col-7 d-flex justify-content-end">
-            <label class="form-label me-3 align-self-center">Kategoria</label>
-            <select class="form-control w-25"></select>
+        <div class="row p-2">
+            <div class="col-5">
+                <form class="d-flex">
+                    <label class="form-label me-3 align-self-center">Wyszukiwanie</label> 
+                    <input class="form-control me-2" type="search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+            <div class="col-7 d-flex justify-content-end">
+                <label class="form-label me-3 align-self-center">Sortowanie</label>
+                <select class="form-control w-25">
+                    @for (int i = 0; i < @ViewBag.Sort.Count; i++)
+                    {
+                        <option value="@i">@ViewBag.Sort[@i]</option>
+                    }
+                </select>
+            </div>
         </div>
-    </div>
-    <div class="row p-2">
-        <div class="col-5">
-            <form class="d-flex">
-                <label class="form-label me-3 align-self-center">Wyszukiwanie</label> 
-                <input class="form-control me-2" type="search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
-        <div class="col-7 d-flex justify-content-end">
-            <label class="form-label me-3 align-self-center">Sortowanie</label>
-            <select class="form-control w-25"></select>
-        </div>
-    </div>
-    
-    <ul class="list-group mt-4">
-        @foreach (var book in Model)
-        {
-            <li class="list-group-item d-flex justify-content-between">
-                <div class="align-self-center">
-                    <a class="text-decoration-none text-dark" asp-route-id="@book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@book.Title</strong></a><br>
-                    <small class="small">@book.AuthorId</small>
-                </div>
-                <div class="align-self-center">       
-                    <a class="btn btn-outline-primary" asp-route-id="@book.Id" asp-controller="Book" asp-action="Edit"><i class="bi"></i> Edytuj</a>
-                    <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal"><i class="bi bi-trash"></i> Usuń</a>
-                    <form asp-route-id="@book.Id" asp-controller="Book" asp-action="Delete" method="post">
-                        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-                          <div class="modal-dialog">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="deleteModalLabel">Usuwanie</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                              </div>
-                              <div class="modal-body">
-                                Czy na pewno usunąć książkę?
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
-                                <button type="submit" class="btn btn-danger">Usuń</button>
+
+        <ul class="list-group mt-4">
+            @foreach (var book in Model)
+            {
+                <li class="list-group-item d-flex justify-content-between">
+                    <div class="align-self-center">
+                        <a class="text-decoration-none text-dark" asp-route-id="@book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@book.Title</strong></a><br>
+                        <small class="small">@book.Name @book.LastName</small>
+                    </div>
+                    <div class="align-self-center">       
+                        <a class="btn btn-outline-primary" asp-route-id="@book.Id" asp-controller="Book" asp-action="Edit"><i class="bi"></i> Edytuj</a>
+                        <a class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal"><i class="bi bi-trash"></i> Usuń</a>
+                        <form asp-route-id="@book.Id" asp-controller="Book" asp-action="Delete" method="post">
+                            <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                              <div class="modal-dialog">
+                                <div class="modal-content">
+                                  <div class="modal-header">
+                                    <h5 class="modal-title" id="deleteModalLabel">Usuwanie</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                  </div>
+                                  <div class="modal-body">
+                                    Czy na pewno usunąć książkę?
+                                  </div>
+                                  <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Anuluj</button>
+                                    <button type="submit" class="btn btn-danger">Usuń</button>
+                                  </div>
+                                </div>
                               </div>
                             </div>
-                          </div>
-                        </div>
-                    </form>
-                </div>
-            </li>    
-        }
-    </ul>
+                        </form>
+                    </div>
+                </li>    
+            }
+        </ul>
+    }
+    else
+    {
+        <div class="row p-2">
+            <div class="col-12 d-flex justify-content-end">
+                <label class="form-label me-3 align-self-center">Kategoria</label>
+                <select class="form-control w-25">
+                    <option value="">Wszystko</option>
+                    @for (int i = 0; i < @ViewBag.Categories.Count; i++)
+                    {
+                        <option value="@i">@ViewBag.Categories[@i]</option>
+                    }
+                </select>
+            </div>
+        </div>
+        <div class="row p-2">
+            <div class="col-5">
+                <form class="d-flex">
+                    <label class="form-label me-3 align-self-center">Wyszukiwanie</label> 
+                    <input class="form-control me-2" type="search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </div>
+            <div class="col-7 d-flex justify-content-end">
+                <label class="form-label me-3 align-self-center">Sortowanie</label>
+                <select class="form-control w-25">
+                    @for (int i = 0; i < @ViewBag.Sort.Count; i++)
+                    {
+                        <option value="@i">@ViewBag.Sort[@i]</option>
+                    }
+                </select>
+            </div>
+        </div>
+
+        <ul class="list-group mt-4">
+            @foreach (var book in Model)
+            {
+                <li class="list-group-item d-flex justify-content-between">
+                    <div class="align-self-center">
+                        <a class="text-decoration-none text-dark" asp-route-id="@book.Id" asp-controller="Book" asp-action="Details"><strong class="mb-1">@book.Title</strong></a><br>
+                        <small class="small">@book.Name @book.LastName</small>
+                    </div>
+                </li>    
+            }
+        </ul>
+    }
 
     <div class="row">
         <div class="col-md-4">
