--- a/LibraryApp/Views/Author/Create.cshtml
+++ b/LibraryApp/Views/Author/Create.cshtml
@@ -1,7 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+     ViewData["Title"] = "Dodaj autora";
 }
 
 <div class="col-sm-6 mx-auto">
@@ -18,7 +16,7 @@
             <input id="LastName" name="LastName" type="text" class="form-control" minlength="3" maxlength="100" required>
         </div>
         
-        <button class="btn btn-primary" type="submit">Opublikuj</button>
+        <button class="btn btn-primary" type="submit">Zapisz</button>
     </form>
 </div>
 
