--- a/LibraryApp/Views/Author/Details.cshtml
+++ b/LibraryApp/Views/Author/Details.cshtml
@@ -1,11 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+     ViewData["Title"] = "O autorze";
 }
 
+<h3>@ViewData["Title"]</h3>
 O autorze
 <div>
+
     <h3>@Model.Name @Model.LastName</h3>
 
     <p>@Model.Id</p>
