--- a/LibraryApp/Views/Author/Index.cshtml
+++ b/LibraryApp/Views/Author/Index.cshtml
@@ -1,18 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+     ViewData["Title"] = "Autorzy";
 }
-
 
 <div class="container">
     <div class="row p-2">
-        <div class="col-5">
+        <div class="col-12 d-flex justify-content-end">
             <a class="btn btn-primary" asp-controller="Author" asp-action="Create">Dodaj autora</a>
-        </div>
-        <div class="col-7 d-flex justify-content-end">
-            <label class="form-label me-3 align-self-center">Kategoria</label>
-            <select class="form-control w-25"></select>
         </div>
     </div>
     <div class="row p-2">
