--- a/LibraryApp/Views/Book/Details.cshtml
+++ b/LibraryApp/Views/Book/Details.cshtml
@@ -1,12 +1,10 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+     ViewData["Title"] = "O książce";
 }
 
 O książce
 <div>
     <h3>@Model.Title</h3>
 
-    <p>@Model.City</p>
+    <p>@Model.Name @Model.LastName</p>
 </div>
