--- a/LibraryApp/Views/Shared/_LoginPartial.cshtml
+++ b/LibraryApp/Views/Shared/_LoginPartial.cshtml
@@ -5,57 +5,57 @@
 @inject UserManager<AppUser> UserManager
 
 <ul class="navbar-nav">
-@if (User.IsInRole("Admin"))
-{
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Admin @UserManager.GetUserName(User)</a>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" asp-controller="Book" asp-action="Index">Książki</a></li>
-            <li><a class="dropdown-item" asp-controller="Author" asp-action="Index">Autorzy</a></li>
-            <li><a class="dropdown-item" href="#">Użytkownicy</a></li>
-            <li><a class="dropdown-item" href="#">Ustawienia</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li>
-                <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button type="submit" class="dropdown-item">Wyloguj</button>
-                </form>
-            </li>
-        </ul>
-    </li>
- }
-else if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a id="user" class="nav-link text-dark" title="User">@UserManager.GetUserName(User)</a>
-    </li>
+    @if (User.IsInRole("Admin"))
+    {
+        <li class="nav-item">
+            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Admin @UserManager.GetUserName(User)</a>
+        </li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" asp-controller="Book" asp-action="Index">Książki</a></li>
+                <li><a class="dropdown-item" asp-controller="Author" asp-action="Index">Autorzy</a></li>
+                <li><a class="dropdown-item" asp-controller="User" asp-action="Index">Użytkownicy</a></li>
+                <li><a class="dropdown-item" href="#">Ustawienia</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                    <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        <button type="submit" class="dropdown-item">Wyloguj</button>
+                    </form>
+                </li>
+            </ul>
+        </li>
+     }
+    else if (SignInManager.IsSignedIn(User))
+    {
+        <li class="nav-item">
+            <a id="user" class="nav-link text-dark" title="User">@UserManager.GetUserName(User)</a>
+        </li>
 
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Książki</a></li>
-            <li><a class="dropdown-item" href="#">Ulubione</a></li>
-            <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Ustawienia</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li>
-                <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button type="submit" class="dropdown-item">Wyloguj</button>
-                </form>
-            </li>
-        </ul>
-    </li>
-}
-else
-{
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
-}
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Moje książki</a></li>
+                <li><a class="dropdown-item" href="#">Ulubione</a></li>
+                <li><a class="dropdown-item" asp-area="Identity" asp-page="/Account/Manage/Index">Ustawienia</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                    <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                        <button type="submit" class="dropdown-item">Wyloguj</button>
+                    </form>
+                </li>
+            </ul>
+        </li>
+    }
+    else
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        </li>
+    }
 </ul>
