--- a/LibraryApp/Views/User/Edit.cshtml
+++ b/LibraryApp/Views/User/Edit.cshtml
@@ -1,8 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+     ViewData["Title"] = "Edytuj dane użytkownika";
 }
 
-edytowanie użytkownika
+<div class="col-sm-6 mx-auto">
+    <form asp-controller="User" asp-action="Edit" method="post">
+        <h3 class="mb-3">Edytuj dane użytkownika</h3>
+        
+        <div class="mb-3">
+            <label for="UserName">Nazwa</label><br>
+            <input id="UserName" name="UserName" type="text" class="form-control" minlength="3" maxlength="100" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="Email">Email</label><br>
+            <input id="Email" name="Email" type="text" class="form-control" minlength="3" maxlength="100" required>
+        </div>
+
+        <button class="btn btn-primary" type="submit">Zapisz</button>
+    </form>
+</div>
 
