--- a/LibraryApp/Views/Book/Create.cshtml
+++ b/LibraryApp/Views/Book/Create.cshtml
@@ -1,5 +1,22 @@
-﻿@{
+﻿@model BookViewModel
+@{
     ViewData["Title"] = "Dodaj książkę";
+}
+
+@if (@ViewData["Alert"] != null)
+{
+    if (@ViewData["Alert"]?.ToString() == "Success")
+    {
+        <div class="alert alert-success" role="alert">
+            Akcja została wykonana pomyślnie!
+        </div>
+    }
+    else if (@ViewData["Alert"]?.ToString() == "Danger")
+    {
+        <div class="alert alert-danger" role="alert">
+            Wystąpił błąd! Akcja nie została wykonana!
+        </div>
+    }
 }
 
 <div class="col-sm-6 mx-auto">
@@ -15,7 +32,7 @@
             <label for="Author">Autor</label><br>
             <select id="Author" name="Author" class="form-control">
                 <option value="">Wybierz autora</option>
-                @foreach (var author in Model)
+                @foreach (var author in @Model.Authors)
                 {
                     <option value="@author.Id">@author.Name @author.LastName</option>
                 }
@@ -29,17 +46,18 @@
 
         <div class="mb-3">
             <label for="Image">Obraz</label><br>
-            <input id="Image" type="file" class="form-control-file" minlength="3" maxlength="100" required>
+            <input id="Image" name="Image" type="file" class="form-control-file" minlength="3" maxlength="100" required>
+            <img src="~/images/@Model.Image"  height="40" width="40"/> 
         </div>
 
         <div class="mb-3">
             <label for="Year">Rok</label><br>
-            <input name="Year" type="number" class="form-control" minlength="3" maxlength="100" required>
+            <input id="Year" name="Year" type="number" class="form-control" minlength="3" maxlength="100" required>
         </div>
 
         <div class="mb-3">
             <label for="City">Miasto</label><br>
-            <input name="City" type="text" class="form-control" minlength="3" maxlength="100" required>
+            <input id="City" name="City" type="text" class="form-control" minlength="3" maxlength="100" required>
         </div>
 
         <button class="btn btn-primary" type="submit">Zapisz</button>
