--- a/LibraryApp/Views/Book/Index.cshtml
+++ b/LibraryApp/Views/Book/Index.cshtml
@@ -2,6 +2,22 @@
      ViewData["Title"] = "Książki";
 }
 
+@if (@TempData["Alert"] != null)
+{
+    if (@TempData["Alert"]?.ToString() == "Success")
+    {
+        <div class="alert alert-success" role="alert">
+            Akcja została wykonana pomyślnie!
+        </div>
+    }
+    else if (@TempData["Alert"]?.ToString() == "Danger")
+    {
+        <div class="alert alert-danger" role="alert">
+            Wystąpił błąd! Akcja nie została wykonana!
+        </div>
+    }
+}
+
 <div class="container">
     @if (User.IsInRole("Admin"))
     {
